feat: find artist by id. close #2

--- a/specs/main.yaml
+++ b/specs/main.yaml
@@ -36,12 +36,68 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponses'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponses'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponses'
         409:
           description: Conflict
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponses'
+  /artist/{id}:
+    get:
+      tags:
+        - Artist
+      summary: Find artist by id
+      description: Find Artist by id from database
+      operationId: findArtistById
+      security:
+        - oAuth:
+            - artist:read
+      parameters:
+        - name: id
+          in: path
+          description: Artist id to be fetch
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        404:
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponses'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponses'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponses'
+
 components:
   securitySchemes:
     oAuth:
