feat: add exception handling. close #7

--- a/specs/main.yaml
+++ b/specs/main.yaml
@@ -318,6 +318,8 @@ components:
           format: date-time
         path:
           type: string
+        errorCode:
+          type: string
         errors:
           type: array
           items:
