feat: updating README.md. close #21

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.crok4it</groupId>
     <artifactId>event-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>event-management</name>
     <description>event-management</description>
     <properties>
